--- a/assets/main.css
+++ b/assets/main.css
@@ -392,6 +392,14 @@ p {
   position: relative;
   height: 0;
 }
+.video-responsive img {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
 .video-responsive iframe {
   left: 0;
   top: 0;
