--- a/assets/main.css
+++ b/assets/main.css
@@ -326,7 +326,7 @@ p {
   text-align: center;
   padding: 15px;
   background-color: #1DB954;
-  border: #fff 3px solid;
+  border: none;
   color: #fff;
   font-size: 1.2em;
   font-weight:700;
